// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manga page should render correctly Should render correctly as admin 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-9"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-4"
    >
      <a
        aria-label="myanimelist page of the manga"
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <MangaCover
          alt="Dr. STONE"
          url="/images/test.png"
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-11"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-10"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "cover": "/images/test.png",
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimatedRelease": "2020-07-12T16:00:00.000Z",
                "kt": "https://kitsu.io/manga/38860",
                "lastUpdated": "2020-06-28T08:15:55.170Z",
                "latestChapter": 157,
                "latestRelease": "2020-07-05T16:00:00.000Z",
                "mal": "https://myanimelist.net/manga/103897",
                "mangaId": 1,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "releaseInterval": Object {
                  "days": 7,
                },
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases
            aliases={
              Array [
                "test alias",
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-7",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "serviceId": 1,
                "titleId": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "urlFormat": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
              Object {
                "name": "MangaDex",
                "serviceId": 2,
                "titleId": "20882",
                "url": "https://mangadex.org/title/{}",
                "urlFormat": "https://mangadex.org/chapter/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        editable={false}
        mangaId={1}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
            "2": "https://mangadex.org/chapter/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;

exports[`Manga page should render correctly should render correctly 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-9"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-4"
    >
      <a
        aria-label="myanimelist page of the manga"
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <MangaCover
          alt="Dr. STONE"
          url="/images/test.png"
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-11"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-10"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "cover": "/images/test.png",
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimatedRelease": "2020-07-12T16:00:00.000Z",
                "kt": "https://kitsu.io/manga/38860",
                "lastUpdated": "2020-06-28T08:15:55.170Z",
                "latestChapter": 157,
                "latestRelease": "2020-07-05T16:00:00.000Z",
                "mal": "https://myanimelist.net/manga/103897",
                "mangaId": 1,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "releaseInterval": Object {
                  "days": 7,
                },
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases
            aliases={
              Array [
                "test alias",
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-7",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "serviceId": 1,
                "titleId": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "urlFormat": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
              Object {
                "name": "MangaDex",
                "serviceId": 2,
                "titleId": "20882",
                "url": "https://mangadex.org/title/{}",
                "urlFormat": "https://mangadex.org/chapter/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        editable={false}
        mangaId={1}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
            "2": "https://mangadex.org/chapter/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;

exports[`Manga page should render correctly should render correctly when logged in 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-9"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-4"
    >
      <a
        aria-label="myanimelist page of the manga"
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <MangaCover
          alt="Dr. STONE"
          url="/images/test.png"
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-11"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-10"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "cover": "/images/test.png",
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimatedRelease": "2020-07-12T16:00:00.000Z",
                "kt": "https://kitsu.io/manga/38860",
                "lastUpdated": "2020-06-28T08:15:55.170Z",
                "latestChapter": 157,
                "latestRelease": "2020-07-05T16:00:00.000Z",
                "mal": "https://myanimelist.net/manga/103897",
                "mangaId": 1,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "releaseInterval": Object {
                  "days": 7,
                },
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases
            aliases={
              Array [
                "test alias",
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-7",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "serviceId": 1,
                "titleId": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "urlFormat": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
              Object {
                "name": "MangaDex",
                "serviceId": 2,
                "titleId": "20882",
                "url": "https://mangadex.org/title/{}",
                "urlFormat": "https://mangadex.org/chapter/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        editable={false}
        mangaId={1}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
            "2": "https://mangadex.org/chapter/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;

exports[`Manga page should render correctly should render correctly with little data 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-9"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE 2
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-4"
    >
      <a
        aria-label="myanimelist page of the manga"
        href={null}
        rel="noreferrer noopener"
        target="_blank"
      >
        <MangaCover
          alt="Dr. STONE 2"
          url={null}
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-11"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-10"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "cover": null,
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimatedRelease": null,
                "kt": "https://kitsu.io/manga/38860",
                "lastUpdated": null,
                "latestChapter": null,
                "latestRelease": null,
                "mal": null,
                "mangaId": 2,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "releaseInterval": undefined,
                "status": 0,
                "title": "Dr. STONE 2",
              }
            }
          />
          <MangaAliases />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-7",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "serviceId": 1,
                "titleId": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "urlFormat": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        editable={false}
        mangaId={2}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;
